--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+
+    <h1>Amplifier</h1>
+    <br>
+
+    <nav>
+        <ul>
+            <li> Assembly</li>
+            <li> Fulfillment</li>
+            <li> Inventory Control</li>
+            <li> Batch</li>
+            <li> Receving</li>
+            <li> Manufacturing</li>
+            <li> Inventory Movement</li>
+            <li> B2B</li>
+            <li> Client Service</li>
+        </ul>
+    </nav>
     
 </body>
 </html>
