css and js page made and linked

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li> Batch</li>
             <li> Receving</li>
             <li> Manufacturing</li>
-            <li> <a href="html.pages/movement.html">Inventory Movement</a></li>
+            <li> <a href="inventory.movment/movement.html">Inventory Movement</a></li>
             <li> B2B</li>
             <li> Client Service</li>
         </ul>
