--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Movement</title>
+    <link rel="stylesheet" href="movement.css">
+    <script src="movement.js"></script>
+    <h1>Inventory Movement</h1>
 </head>
 <body>
     
