fork image added

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -10,6 +10,7 @@
     <h1>Inventory Movement</h1>
 </head>
 <body>
+    <img src="img/reach_truck_rental.jpg" alt="fork" srcset="">
     
 </body>
 </html>
