image width and height fixed

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -10,7 +10,7 @@
     <h1>Inventory Movement</h1>
 </head>
 <body>
-    <img src="img/reach_truck_rental.jpg" alt="fork" srcset="">
+    <img src="images/reach_truck_rental.jpg" alt="fork" width="200px" height="200px">
     
 </body>
 </html>
