--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -10,7 +10,10 @@
     <h1>Inventory Movement</h1>
 </head>
 <body>
-    <img src="images/reach_truck_rental.jpg" alt="fork" width="200px" height="200px">
+    <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
+    <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">Narrow Isle Reach
+    <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
+    <img src="images/DSD-EX-60-1.jpg" alt="Sit down forklift" width="400px" height="400px">
     
 </body>
 </html>
