--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -10,8 +10,20 @@
     <h1>Inventory Movement</h1>
 </head>
 <body>
+    <h2>What we do</h2>
+    <a>The Inventory Movement team has many tasks to perform thoughout the day.
+        Below listed are the tasks we do:
+        <ul>
+            <li>Clear VASP%</li>
+            <li>Clear PTWY%</li>
+            <li>Replenishment</li>
+            <li>Transfer list</li>
+            <li>Deplenishment</li>
+        </ul>
+    </a>
+    <br>
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
-    <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">Narrow Isle Reach
+    <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
     <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
     <img src="images/DSD-EX-60-1.jpg" alt="Sit down forklift" width="400px" height="400px">
     
