--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -12,7 +12,7 @@
 <body>
     <h2>What we do</h2>
     <a>The Inventory Movement team has many tasks to perform thoughout the day.
-        Below listed are the tasks we do:
+        Below listed are the tasks:
         <ul>
             <li>Clear VASP%</li>
             <li>Clear PTWY%</li>
