--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -22,6 +22,13 @@
         </ul>
     </a>
     <br>
+    <h2>Tasks Explanation</h2>
+    <a>Clearing VASP% and PTWY% locations are our way of putting certain pallets of merchandise directly received by our Receving team either into storage or sending those pallets to our Asseembly team to be made ready, and then moved into storage.
+        Replenishment work is made by our computer system and is made based off what customers are ording in bulk and will need to be shipped out for the day or for the near future. 
+        Transfer work is created by the Team Lead or by the Team Line Lead. Both will require you to go to certain storage locations in the warehouse get a number of specific items from that location and then move them into a forward pick location. These forward pick locations will allow the "cart pickers" from our Fulfilment team to pick those items, pack then and ship them to the customers.
+    </a>
+    <br>
+    <br>
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
     <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
