--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -24,8 +24,9 @@
     <br>
     <h2>Tasks Explanation</h2>
     <a>Clearing VASP% and PTWY% locations are our way of putting certain pallets of merchandise directly received by our Receving team either into storage or sending those pallets to our Asseembly team to be made ready, and then moved into storage.
-        Replenishment work is made by our computer system and is made based off what customers are ording in bulk and will need to be shipped out for the day or for the near future. 
+        Replenishment work is made by our computer system and is made based off what customers are ordering in bulk and will need to be shipped out for the day or for the near future. 
         Transfer work is created by the Team Lead or by the Team Line Lead. Both will require you to go to certain storage locations in the warehouse get a number of specific items from that location and then move them into a forward pick location. These forward pick locations will allow the "cart pickers" from our Fulfilment team to pick those items, pack then and ship them to the customers.
+        Deplenishment is when we move items that were in forward pick locations back into warehouse storage locations. We do this to free up forward pick spots for other inventory.
     </a>
     <br>
     <br>
