marco image added

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -30,9 +30,12 @@
     </a>
     <br>
     <br>
-    <a>
+    <h2>Team Lead</h2>
+    <a> Your Team Lead for Inventory Movement is Marco. Look for him if you have any questions or concerns. If Marco is not around the next best person to reach out to would be John Ramsey.
+        The role of the team lead is to support you in anyway you need to have a successful shift.
 
     </a>
+    <img id="marco" src="images/marco.jpeg" alt="Marco" width="400px" height="400px">
     <br>
     <br>
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
