--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -36,8 +36,13 @@
 
     </a>
     <img id="marco" src="images/marco.jpeg" alt="Marco" width="400px" height="400px">
+    
     <br>
     <br>
+
+    <h2>Replenishment & Transfers</h2>
+    <a>When doing replen and transfers you'll first start off with a single work order. From there you'll scan the work order with your RF Scanner</a>
+
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
     <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
