--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -49,10 +49,12 @@
     <img src="images/IMG_0900.jpg" alt="work run" width="300px" height="300px">
     <img src="images/IMG_0901.jpg" alt="location" width="300px" height="300px">
     <img src="images/IMG_0902.jpg" alt="item" width="300px" height="300px">
-    <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. </a> <br>
+    <!-- <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px"> -->
+    <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. A pallet jack is also a common peice of equipment we use everyday. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
     <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
     <img src="images/DSD-EX-60-1.jpg" alt="Sit down forklift" width="400px" height="400px">
+    <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px">
     
 </body>
 </html>
