--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -43,10 +43,12 @@
     <h2>Replenishment & Transfers</h2>
     <a>When doing replen and transfers you'll first start off with a single work order. From there you'll scan the work order with your RF Scanner.
         The next step would be to go to the location on the work order to get the item. This location will also be displayed on the RF scanner. When you arrive at the location you will use the RF scanner to scan the pallet location. Next you will look on the pallet for the item you need. When you find this item it'll usually have a barcode on it. You'll scan the barcode, count the amount you need and add them to you cart for later. The next step will be to go to 
-        the forward pick location to put the item up. 
+        the forward pick location to put the item up. Its important to always confirm our work on our RF scanner, this will let our computer system know the item is in place and allow other departments to get these items.
+    
     </a>
     <br>
     <img src="images/IMG_0900.jpg" alt="work run" width="300px" height="300px">
+    <a>This is what a single work unit print out looks like.The first thing we should notice is that the location we're picking from is </a>
     <img src="images/IMG_0901.jpg" alt="location" width="300px" height="300px">
     <img src="images/IMG_0902.jpg" alt="item" width="300px" height="300px">
     <!-- <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px"> -->
