--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -48,9 +48,11 @@
     </a>
     <br>
     <img src="images/IMG_0900.jpg" alt="work run" width="300px" height="300px">
-    <a>This is what a single work unit print out looks like.The first thing we should notice is that the location we're picking from is </a>
+    <a>This is what a single work unit print out looks like.The first thing we should notice is that the location we're picking from is. In this instance we're going to be going to a location on the 3rd level so we'll need to use the cherry picker machine to get to this level. </a>
     <img src="images/IMG_0901.jpg" alt="location" width="300px" height="300px">
+    <a>now that we've arrived at this location we will firsy scan the location with our RF scanner then look for the item on the pallet.</a>
     <img src="images/IMG_0902.jpg" alt="item" width="300px" height="300px">
+    <a>Once this item is found we'll count the correct ammount and add it to our cart to be moved to its forward pick location></a>
     <!-- <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px"> -->
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. A pallet jack is also a common peice of equipment we use everyday. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
