--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -53,6 +53,12 @@
     <a>now that we've arrived at this location we will firsy scan the location with our RF scanner then look for the item on the pallet.</a>
     <img src="images/IMG_0902.jpg" alt="item" width="300px" height="300px">
     <a>Once this item is found we'll count the correct ammount and add it to our cart to be moved to its forward pick location></a>
+    <br>
+    <br>
+    <h2> Our SLA's</h2>
+    <a>SLA stands for Service Level Agreement. Our first SLA it to complete Replenishment by 1PM. Our second SLA is to have Transfers completed by 2PM.
+        
+    </a>
     <!-- <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px"> -->
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. A pallet jack is also a common peice of equipment we use everyday. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
