Busy or light days

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -59,6 +59,12 @@
     <a>SLA stands for Service Level Agreement. Our first SLA it to complete Replenishment by 1PM. Our second SLA is to have Transfers completed by 2PM.
         
     </a>
+    <br>
+    <h2>Busy or Light shift</h2>
+    <a>Below is a display of the current work going on in the warehouse. This board can also be used to determine if we're close to hitting our SLAs.
+        This display is usually up on my Work desk as a refernce for the team. If the Board ever looks light, have no fear because there is always projects to work on or 
+        other departments to help. It's common to work in multiple departments throughout a day, so its best practice to work and learn how other departments work.
+    </a>
     <!-- <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px"> -->
     <a id="operator">When working on the team you will become familiar with driving and operating machinery in the warehouse. Below are images of the machinery we use everyday. To be eligiable to become an operatior, you'll have to watch a training video, pass a written test and be trained by our warehouse trainer. A pallet jack is also a common peice of equipment we use everyday. </a> <br>
     <img src="images/reach_truck_rental.jpg" alt="fork" width="400px" height="400px">
