--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -14,8 +14,8 @@
     <a>The Inventory Movement team has many tasks to perform thoughout the day.
         Below listed are the tasks:
         <ul>
-            <li>Clear VASP%</li>
-            <li>Clear PTWY%</li>
+            <li>Clear VASP% Location</li>
+            <li>Clear PTWY% Location</li>
             <li>Replenishment</li>
             <li>Transfer list</li>
             <li>Deplenishment</li>
