--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -71,6 +71,9 @@
     <img src="images/sp4000-order-picking-application.jpg" alt="cherry picker" width="400px" height="400px">
     <img src="images/DSD-EX-60-1.jpg" alt="Sit down forklift" width="400px" height="400px">
     <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px">
-    
+    <br>
+    <br>
+    <h2>If you cant make your shift</h2>
+    <img src="images/noshow.jpg" alt="No Show" width="400px" height="400px">
 </body>
 </html>
