--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -73,7 +73,8 @@
     <img src="images/Pompwagen.jpg" alt="pallet jack" width="300px" height="300px">
     <br>
     <br>
-    <h2>If you cant make your shift</h2>
-    <img src="images/noshow.jpg" alt="No Show" width="400px" height="400px">
+    <h2>If for any reason you wont be able to make your shift please call the number listed below</h2>
+    <img src="images/noshow.jpg" alt="No Show" width="600px" height="600px">
+    <a>This will allow us to make the changes needed to have a sucessful shift.</a>
 </body>
 </html>
