updated team lead info

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -31,9 +31,8 @@
     <br>
     <br>
     <h2>Team Lead</h2>
-    <a> Your Team Lead for Inventory Movement is Marco. Look for him if you have any questions or concerns. If Marco is not around the next best person to reach out to would be John Ramsey.
-        The role of the team lead is to support you in anyway you need to have a successful shift.
-
+    <a> Every team in the warehouse will have a team Lead, and a Line Lead. The Team Lead is here to support you in anyway you need.Their goal is to move the team around to ensure the daily SLas are hit and to help you have a successful shift.
+        If you have any questions or concerns feel free to let your team lead know and they'll do there best to fix them. The Line Leads can also help throughout the day if you have any questions or help set the team up for a successful shirt if the Team Lead is at a meeting or out for the day.
     </a>
     <img id="marco" src="images/marco.jpeg" alt="Marco" width="400px" height="400px">
     
