--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -34,7 +34,7 @@
     <a> Every team in the warehouse will have a team Lead, and a Line Lead. The Team Lead is here to support you in anyway you need.Their goal is to move the team around to ensure the daily SLas are hit and to help you have a successful shift.
         If you have any questions or concerns feel free to let your team lead know and they'll do there best to fix them. The Line Leads can also help throughout the day if you have any questions or help set the team up for a successful shirt if the Team Lead is at a meeting or out for the day.
     </a>
-    <img id="marco" src="images/marco.jpeg" alt="Marco" width="400px" height="400px">
+    <!-- <img id="marco" src="images/marco.jpeg" alt="Marco" width="400px" height="400px"> -->
     
     <br>
     <br>
