button for returning to home page added

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -75,5 +75,9 @@
     <h2>If for any reason you wont be able to make your shift please call the number listed below</h2>
     <img src="images/noshow.jpg" alt="No Show" width="600px" height="600px">
     <a>This will allow us to make the changes needed to have a sucessful shift.</a>
+
 </body>
+<footer>
+    <button>Home Page</button>
+</footer>
 </html>
