tring to link button to hompage

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -78,6 +78,12 @@
 
 </body>
 <footer>
-    <button id="hover">Home Page</button>
+    <!-- <button id="hover">Home Page</button> -->
+   
+    <ul>
+        <li>
+            <a href="">Home Page</a>
+        </li>
+    </ul>
 </footer>
 </html>
