--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -43,6 +43,7 @@
     <a>When doing replen and transfers you'll first start off with a single work order. From there you'll scan the work order with your RF Scanner.
         The next step would be to go to the location on the work order to get the item. This location will also be displayed on the RF scanner. When you arrive at the location you will use the RF scanner to scan the pallet location. Next you will look on the pallet for the item you need. When you find this item it'll usually have a barcode on it. You'll scan the barcode, count the amount you need and add them to you cart for later. The next step will be to go to 
         the forward pick location to put the item up. Its important to always confirm our work on our RF scanner, this will let our computer system know the item is in place and allow other departments to get these items.
+        A very important rule to remember is to never type a location or item code into a RF Scanner. If you ever come across a location thats missing it barcode, please be sure to stop and go alert your team lead. This also goes for if you ever come across an item that is missing a scannable barcode. But remebering to follow this small rule we can help prevent a bigger problem down the line.
     
     </a>
     <br>
