info on batch picker added

--- a/inventory.movment/movement.html
+++ b/inventory.movment/movement.html
@@ -19,6 +19,7 @@
             <li>Replenishment</li>
             <li>Transfer list</li>
             <li>Deplenishment</li>
+            <li>Batch Picker</li>
         </ul>
     </a>
     <br>
@@ -38,6 +39,8 @@
     
     <br>
     <br>
+    <h2>Batch Picker</h2>
+    <a>Every morning we will choose someone on our team to be our daily batch picker. This is a role that will last the whole shift. A tool has been created to help choose who our daily picker will be.</a>
 
     <h2>Replenishment & Transfers</h2>
     <a>When doing replen and transfers you'll first start off with a single work order. From there you'll scan the work order with your RF Scanner.
